--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css' type='text/css'>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel='stylesheet' href='css/styles.css' type='text/css'>
     <link rel='stylesheet' href='css/normalize.css' type='text/css'>
   </head>
@@ -15,109 +16,199 @@
     <div id="mySidenav" class="side-nav bg-dark">
       <button class="navheader" onclick="scrollHandler('welcomeSection')">Welcome</button>
       <hr>
-      <p class="navheader">Projects</p>
-      <button class="text-nowrap" onclick="scrollHandler('responsiveWebDesign')">Responsive Web</br>Design</button>
-    <button class="text-nowrap" onclick="scrollHandler('javascript')">JS Algorithms</br>& Data Structures</button>
-  <button class="text-nowrap" onclick="scrollHandler('frontEnd')">Front End Libraries</br>(React & BootStrap)</button>
-</div>
-<nav class="top-nav navbar navbar-expand-lg bg-dark fixed-top">
-<ul class="navbar-nav mr-auto">
-  <li class="nav-item">
-    <button class="fas fa-bars" onclick="openNav()"></button>
-  </li>
-</ul>
-<button id="contactsButton" class="btn btn-secondary navbar-toggler" type="button" onclick="closeNav()" data-toggle="collapse" data-target="#contactsToggler" aria-controls="contactsToggler" aria-expanded="false" aria-label="Toggle contacts">
-          Contact
-        </button>
-<div class="collapse navbar-collapse" id="contactsToggler">
-  <ul class="navbar-nav ml-auto">
+      <p class="navheader text-nowrap">Personal Projects</p>
+      <button class="text-nowrap" onclick="scrollHandler('toDoList')">To Do List</button>
+      <hr>
+      <p class="navheader text-nowrap">freeCodeCamp Projects</p>
+      <button class="text-nowrap" onclick="scrollHandler('stockPriceChecker')">Stock Price Checker</button>
+      <button class="text-nowrap" onclick="scrollHandler('exerciseTracker')">Exercise Tracker</button>
+      <button class="text-nowrap" onclick="scrollHandler('choroplethMap')">Chloropleth Map</button>
+      <button class="text-nowrap" onclick="scrollHandler('jsCalculator')">JavaScript Calculator</button>
+      </div>
+  <nav class="top-nav navbar navbar-expand-lg bg-dark fixed-top">
+  <ul class="navbar-nav mr-auto">
     <li class="nav-item">
-      <a class="nav-link" href="https://github.com/tfox121" target="_blank">GitHub</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="https://www.linkedin.com/in/thomas-fox-00327225/" target="_blank">LinkedIn</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="https://www.freecodecamp.org/tfox121" target="_blank">freeCodeCamp</a>
+      <button class="fas fa-bars" onclick="openNav()"></button>
     </li>
   </ul>
-</div>
-</nav>
-<div class="" id="main">
+  <button id="contactsButton" class="btn btn-secondary navbar-toggler" type="button" onclick="closeNav()" data-toggle="collapse" data-target="#contactsToggler" aria-controls="contactsToggler" aria-expanded="false" aria-label="Toggle contacts">
+            Contact
+          </button>
+  <div class="collapse navbar-collapse" id="contactsToggler">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/tfox121" target="_blank">GitHub</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.linkedin.com/in/thomas-fox-00327225/" target="_blank">LinkedIn</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.freecodecamp.org/tfox121" target="_blank">freeCodeCamp</a>
+      </li>
+    </ul>
+  </div>
+  </nav>
+  <div class="" id="main">
 
-<section id="welcomeSection" class="section d-flex justify-content-center py-5" data-color="#cbf1f6">
-    <div class="col-md-8 my-auto">
-  <h1>Tom Fox</h1>
-  <h2>Full Stack Portfolio</h2>
-  <div>
-</section>
-<section id="responsiveWebDesign" class="section d-flex justify-content-center py-5" data-color="#f6d7cb">
-  <div class="col-md-8 my-auto">
-    <h1>Responsive Web Design Projects</h1>
-    <div class="bg-dark mt-5 px-0">
-      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <p class="codepen" data-height="500" data-theme-id="0" data-default-tab="html,result" data-user="tfox121" data-slug-hash="vwoeNY" data-preview="true" style="height: 368px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="FCC Tribute Page">
-              <span>See the Pen <a href="https://codepen.io/tfox121/pen/vwoeNY">FCC Tribute Page</a> by tfox121 (<a href="https://codepen.io/tfox121">@tfox121</a>) on <a href="https://codepen.io">CodePen</a>.</span>
-            </p>
-            <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-            <div class="carousel-caption d-none d-md-block">
-                <h2>Tribute Page</h2>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <p class="codepen" data-height="500" data-theme-id="0" data-default-tab="html,result" data-user="tfox121" data-slug-hash="pXzPQV" data-preview="true" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="FCC Technical Documentation Page">
-              <span>See the Pen <a href="https://codepen.io/tfox121/pen/pXzPQV"> FCC Technical Documentation Page</a> by tfox121 (<a href="https://codepen.io/tfox121">@tfox121</a>) on <a href="https://codepen.io">CodePen</a>.</span>
-            </p>
-            <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-            <div class="carousel-caption d-none d-md-block">
-              <h2>Technical Documentation Page</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <p class="codepen" data-height="500" data-theme-id="0" data-default-tab="html,result" data-user="tfox121" data-slug-hash="byXXMd" data-preview="true" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="FCC Product Landing Page">
-              <span>See the Pen <a href="https://codepen.io/tfox121/pen/byXXMd">FCC Product Landing Page</a> by tfox121 (<a href="https://codepen.io/tfox121">@tfox121</a>) on <a href="https://codepen.io">CodePen</a>.</span>
-            </p>
-            <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-            <div class="carousel-caption d-none d-md-block">
-              <h2>Product Landing Page</h2>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
+  <section id="welcomeSection" class="section d-flex justify-content-center py-5" data-color="#cbf1f6">
+    <div class="col-lg-6 my-auto">
+      <h1>Tom Fox</h1>
+      <div class="skills-wrapper row justify-content-center p-4 bg-dark shadow rounded">
+        <div class="col-sm-6 pb-5 pt-4">
+          <h2 class="pb-4">Front End</h2>
+          <div class="skills">
+            <!-- HTML -->
+            <i class="devicon-html5-plain-wordmark"></i>
+            <!-- CSS -->
+            <i class="devicon-css3-plain-wordmark"></i>
+            <!-- SASS -->
+            <i class="devicon-sass-original"></i>
+            <!-- d3 -->
+            <i class="devicon-d3js-plain"></i>
+            <!-- Javascript -->
+            <i class="devicon-javascript-plain"></i>
+            <!-- JQuery -->
+            <i class="devicon-jquery-plain-wordmark"></i>
+            <!-- ReactJS -->
+            <i class="devicon-react-original-wordmark"></i>
+            <!-- Redux -->
+            <span class="iconify" data-icon="simple-icons:redux" data-inline="false"></span>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="col-sm-6 pb-5 pt-4">
+          <h2 class="pb-4">Back End</h2>
+          <div class="skills">
+            <!-- HTML -->
+            <i class="devicon-nodejs-plain"></i>
+            <!-- CSS -->
+            <i class="devicon-express-original"></i>
+            <!-- SASS -->
+            <i class="devicon-mongodb-plain-wordmark"></i>
+            <!-- Bootstrap -->
+            <i class="devicon-postgresql-plain-wordmark"></i>
+            <!-- Javascript -->
+            <i class="devicon-mocha-plain"></i>
+            <!-- JQuery -->
+            <i class="devicon-drupal-plain-wordmark"></i>
+            <!-- ReactJS -->
+            <i class="devicon-linux-plain"></i>
+            <!-- Redux -->
+            <i class="devicon-git-plain"></i>
+          </div>
+        </div>
       </div>
     </div>
+  </section>
+  <section id="toDoList" class="section d-flex justify-content-center py-5" data-color="#f6d7cb">
+    <div class="col-lg-9 my-auto">
+      <div class="project-wrapper row card bg-dark flex-lg-row">
+        <div class="glitch-embed-wrap col-md-9 mx-auto">
+          <iframe
+            src="https://glitch.com/embed/#!/embed/todo-list-tf?path=package.json&previewSize=100"
+            title="todo-list-tf on Glitch"
+            allow="geolocation; microphone; camera; midi; vr; encrypted-media"
+            style="height: 100%; width: 100%; border: 0;">
+          </iframe>
+        </div>
+        <div class="col-md-3 mx-auto text-left">
+        <h3>Personal Project - To Do List</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
+        <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Mauris eu risus ut magna dignissim fermentum id eu tellus.</li>
+        </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="stockPriceChecker" class="section d-flex justify-content-center py-5" data-color="#e2cbf6">
+    <div class="col-lg-9 my-auto">
+      <div class="project-wrapper row card bg-dark flex-lg-row">
+        <div class="col-md-3 mx-auto text-left">
+          <h3>fCC Project - Stock Price Checker</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+            <li>Mauris eu risus ut magna dignissim fermentum id eu tellus.</li>
+          </ul>
+        </div>
+        <div class="glitch-embed-wrap col-md-9 mx-auto">
+          <iframe
+            src="https://glitch.com/embed/#!/embed/fcc-stock-price-checker-tf?path=package.json&previewSize=100"
+            title="fcc-stock-price-checker-tf on Glitch"
+            allow="geolocation; microphone; camera; midi; vr; encrypted-media"
+            style="height: 100%; width: 100%; border: 0;">
+          </iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="exerciseTracker" class="section d-flex justify-content-center py-5" data-color="#f6edcb">
+    <div class="col-lg-9 my-auto">
+      <div class="project-wrapper row card bg-dark flex-lg-row">
+        <div class="glitch-embed-wrap col-md-9 mx-auto">
+          <iframe
+              src="https://glitch.com/embed/#!/embed/fcc-exercise-tracker-rest-api-tf?path=README.md&previewSize=100"
+              title="fcc-exercise-tracker-rest-api-tf on Glitch"
+              allow="geolocation; microphone; camera; midi; vr; encrypted-media"
+              style="height: 100%; width: 100%; border: 0;">
+          </iframe>
+        </div>
+        <div class="col-md-3 mx-auto text-left">
+        <h3>fCC Project - Exercise Tracker</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
+        <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Mauris eu risus ut magna dignissim fermentum id eu tellus.</li>
+        </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="choroplethMap" class="section d-flex justify-content-center py-5" data-color="#cbf1f6">
+    <div class="col-lg-9 my-auto">
+      <div class="project-wrapper row card bg-dark flex-lg-row">
+        <div class="col-md-3 mx-auto text-left">
+        <h3>fCC Project - Choropleth Map</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
+        <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Mauris eu risus ut magna dignissim fermentum id eu tellus.</li>
+        </ul>
+        </div>
+        <div class="glitch-embed-wrap col-md-9 mx-auto">
+          <iframe height="100%" style="width: 100%;" scrolling="no" title="FCC: Choropleth Map" src="https://codepen.io/tfox121/embed/preview/pozXqrW?height=790&theme-id=light&default-tab=result" frameborder="no" allowtransparency="true" allowfullscreen="true">
+            See the Pen <a href='https://codepen.io/tfox121/pen/pozXqrW'>FCC: Choropleth Map</a> by tfox121
+            (<a href='https://codepen.io/tfox121'>@tfox121</a>) on <a href='https://codepen.io'>CodePen</a>.
+          </iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="jsCalculator" class="section d-flex justify-content-center py-5" data-color="#f6d7cb">
+    <div class="col-lg-9 my-auto">
+      <div class="project-wrapper row card bg-dark flex-lg-row">
+        <div class="glitch-embed-wrap col-md-9 mx-auto">
+          <iframe height="100%" style="width: 100%;" scrolling="no" title="FCC: Javascript Calculator " src="https://codepen.io/tfox121/embed/preview/MNJZap?height=265&theme-id=light&default-tab=result" frameborder="no" allowtransparency="true" allowfullscreen="true">
+            See the Pen <a href='https://codepen.io/tfox121/pen/MNJZap'>FCC: Javascript Calculator </a> by tfox121
+            (<a href='https://codepen.io/tfox121'>@tfox121</a>) on <a href='https://codepen.io'>CodePen</a>.
+          </iframe>
+        </div>
+        <div class="col-md-3 mx-auto text-left">
+        <h3>fCC Project - JavaScript Calculator</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
+        <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Mauris eu risus ut magna dignissim fermentum id eu tellus.</li>
+        </ul>
+        </div>
+      </div>
+    </div>
+  </section>
   </div>
-</section>
-<section id="javascript" class="section d-flex justify-content-center py-5" data-color="#e2cbf6">
-  <div class="col-md-8 my-auto">
-    <h1>JavaScript Algorithms & Data Structures</h1>
-  </div>
-</section>
-<section id="frontEnd" class="section d-flex justify-content-center py-5" data-color="#f6edcb">
-  <div class="col-md-8 my-auto">
-    <h1>Front End Libraries (React & BootStrap)</h1>
-  </div>
-</section>
-</div>
-</body>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src='scripts/main.js'></script>
+  </body>
+  <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src='scripts/main.js'></script>
 </html>
